WCAG contrast fixes

--- a/css/404.css
+++ b/css/404.css
@@ -1,10 +1,9 @@
 :root {
     --color-primary: #f5f5f5;
-    --color-secondary: #666666;
+    --color-secondary: #444;
     --accent: #cc8400;
     --text-primary: #444;
     --text-secondary: #f5f5f5;
-    --filter-hover-settings: opacity(0.7);
     --filter-active-settings: opacity(0.55)
 }
 *,
@@ -54,11 +53,10 @@ a, button {
     transition: filter 250ms cubic-bezier(0.39, 0.575, 0.565, 1), color 250ms cubic-bezier(0.39, 0.575, 0.565, 1)
 }
 a:hover, button:hover {
-    filter: var(--filter-hover-settings);
     color: var(--color-accent)
 }
 a:focus, button:focus {
-    outline: 2.5px solid var(--accent);
+    outline: 2.5px solid var(--accent)
 }
 a:active {
     filter: var(--filter-active-settings)
