--- a/css/topnbottom.css
+++ b/css/topnbottom.css
@@ -1,10 +1,9 @@
 :root {
     --color-primary: #f5f5f5;
-    --color-secondary: #666666;
-    --accent: #cc8400;
-    --text-primary: #444;
+    --color-secondary: #000;
+    --accent: #d68b00;
+    --text-primary: #000;
     --text-secondary: #f5f5f5;
-    --filter-hover-settings: opacity(0.7);
     --filter-active-settings: opacity(0.55)
 }
 *,
@@ -39,7 +38,6 @@ a, button {
     transition: filter 250ms cubic-bezier(0.39, 0.575, 0.565, 1), color 250ms cubic-bezier(0.39, 0.575, 0.565, 1)
 }
 a:hover, button:hover {
-    filter: var(--filter-hover-settings);
     color: var(--accent)
 }
 a:focus, button:focus {
@@ -54,8 +52,8 @@ a:active {
 }
 .exclusive-nav {
     position: relative;
-    background-color: var(--color-secondary);
-    color: var(--text-secondary);
+    background-color: var(--color-primary);
+    color: var(--text-primary);
 }
 .exclusive-nav a {
     flex: 1;
@@ -117,7 +115,7 @@ a:active {
 }
 #hideDrawerBtn:hover,
 #hideDrawerBtn:focus {
-    transform: scale(1.2)
+    transform: scale(0.9)
 }
 footer {
     background-color: var(--color-primary);
@@ -152,7 +150,6 @@ footer[class^="nav-footer-"] a {
     flex-direction: column;
     margin-bottom: 0.5rem;
     color: var(--text-secondary);
-    text-decoration: none;
     transition: color 300ms ease-in-out
 }
 footer[class^="nav-footer-"] a:hover {
@@ -200,11 +197,10 @@ footer[class^="nav-footer-"] a:hover {
 @media only screen and (prefers-color-scheme: dark) {
     :root {
         --color-primary: #444;
-        --color-secondary: #999999;
-        --accent: #ffb347;
+        --color-secondary: #f5f5f5;
+        --accent: #FFD599;
         --text-primary: #f5f5f5;
         --text-secondary: #444;
-        --filter-hover-settings: brightness(1.1);
         --filter-active-settings: brightness(1.2)
     }
     .dark-theme *, .dark-theme *::before, 
@@ -212,10 +208,11 @@ footer[class^="nav-footer-"] a:hover {
         color: var(--text-primary);
         background-color: var(--color-primary)
     }
-    .dark-theme a:hover, .dark-theme a:focus,
-    .dark-theme button:hover, .dark-theme button:focus {
-        filter: var(--filter-hover-settings);
+    .dark-theme a:hover, .dark-theme button:hover {
         color: var(--accent)
+    }
+    .dark-theme a:focus, .dark-theme button:focus {
+        outline: 2.5px solid var(--accent);
     }
     .dark-theme a:active {
         filter: var(--filter-active-settings)
@@ -224,14 +221,20 @@ footer[class^="nav-footer-"] a:hover {
         border: 1px solid var(--color-secondary);
         background-color: var(--color-primary)
     }
-    .dark-theme .line {
-        background: var(--accent)
+    .dark-theme .menu-icon .line {
+        background: var(--color-secondary)
     }
     .dark-theme .exclusive-nav {
-        border-bottom: 2px solid var(--color-secondary)
+        background-color: var(--color-primary);
+        color: var(--text-primary);
     }
     .dark-theme .drawer {
         background: var(--color-secondary);
+        color: var(--text-secondary);
+        border: 1px solid var(--color-secondary);
+    }
+    .dark-theme #hideDrawerBtn {
+        background-color: var(--color-secondary);
         color: var(--text-secondary)
     }
     .dark-theme footer {
